# RoboRTS-v2

./: README.md
navigation_planning/: CMakeLists.txt  package.xml
navigation_planning/global_planner/: global_planner_config.h  global_planner_node.cpp  global_planner_node.h
navigation_planning/global_planner/a_star_planner/: a_star_planner.cpp
navigation_planning/global_planner/config/: global_planner_config.prototxt
navigation_planning/global_planner/lapkt_planner/: CMakeLists.txt  closed_lists.hxx  gbfs.cxx  lapkt_planner.cpp  lapkt_planner.hxx  open_lists.hxx  state_model.cxx  state_model.hxx
navigation_planning/global_planner/lapkt_planner/config/: lapkt_planner_config.prototxt
navigation_planning/global_planner/lapkt_planner/proto/: lapkt_planner_config.proto
navigation_planning/local_planner/include/local_planner/: obstacle.h  robot_footprint_model.h
navigation_planning/local_planner/src/: local_planner_node.cpp  local_visualization.cpp
roborts_base/config/: roborts_base_parameter.yaml
roborts_base/gimbal/: gimbal.cpp
roborts_base/referee_system/: referee_system.cpp
roborts_bringup/config/: roborts.yaml  roborts_sim.yaml
roborts_bringup/launch/: armor_detection_testing.launch  camera_testing.launch  lidar_yd.launch  mapping.launch  mapping_gazebo.launch  mapping_gazebo_jackal_world.launch  mapping_j120.launch  multibots_one_bot.launch  multibots_rviz.launch  multibots_sim.launch  multisim_gazebo.launch  navigation_gazebo.launch  navigation_testing_jackal_world.launch  navigation_testing_with_simulation.launch  open_day_j120.launch  roborts.launch  roborts_debug_j120.launch  roborts_debug_j121.launch  roborts_j120.launch  roborts_manifold2.launch  roborts_r1.launch  roborts_stage.launch  rplidar.launch  rplidar_a3.launch  sim_gazebo.launch  sim_one_bot_with_navigation.launch  slam_gmapping.xml  static_tf.launch  test_costmap.launch  test_roobrts.launch  unity_mapping.launch  unity_navigation.launch  unity_static_tf.launch
roborts_bringup/maps/: README.md  elite.pgm  elite.yaml  icra2021.pgm  icra2021.yaml  icra2021_empty.pgm  icra2021_empty.yaml  icra2021_invisible.pgm  icra2021_invisible.yaml  icra2021_minor.pgm  icra2021_minor.yaml  jackal.pgm  jackal.yaml  map_160319.pgm  map_160319.yaml  open_day_testing.pgm  open_day_testing.yaml  save.pgm  save.yaml  test01.pgm  test01.yaml  test02.pgm  test02.yaml  test03.pgm  test03.yaml  test04.pgm  test04.yaml  test05.pgm  test05.yaml  test06.pgm  test06.yaml  testing_open_day_2.pgm  testing_open_day_2.yaml  testing_raw.pgm  testing_raw.yaml
roborts_bringup/rviz/: mapping.rviz  roborts.rviz  roborts_r1.rviz  roborts_r2.rviz  roborts_r3.rviz  roborts_r4.rviz
roborts_camera/: CMakeLists.txt  camera_node.cpp  camera_node.h  camera_param.cpp
roborts_costmap/: CMakeLists.txt
roborts_costmap/config/: costmap_parameter_config_for_decision.prototxt  costmap_parameter_config_for_decision_r1.prototxt  costmap_parameter_config_for_global_plan.prototxt  costmap_parameter_config_for_global_plan_r1.prototxt  costmap_parameter_config_for_global_plan_r2.prototxt  costmap_parameter_config_for_global_plan_r3.prototxt  costmap_parameter_config_for_global_plan_r4.prototxt  costmap_parameter_config_for_local_plan.prototxt  costmap_parameter_config_for_local_plan_r1.prototxt  costmap_parameter_config_for_local_plan_r2.prototxt  costmap_parameter_config_for_local_plan_r3.prototxt  costmap_parameter_config_for_local_plan_r4.prototxt  inflation_layer_config.prototxt  inflation_layer_config_min.prototxt  obstacle_layer_config.prototxt  obstacle_layer_config_r1.prototxt  obstacle_layer_config_r2.prototxt  obstacle_layer_config_r3.prototxt  obstacle_layer_config_r4.prototxt  static_layer_config.prototxt
roborts_costmap/include/costmap/: costmap_2d.h  costmap_interface.h  invisible_layer.h  layered_costmap.h  obstacle_layer.h  static_layer.h
roborts_costmap/proto/: costmap_parameter_setting.proto  invisible_layer_setting.proto  obstacle_layer_setting.proto
roborts_costmap/src/: costmap_2d.cpp  costmap_interface.cpp  costmap_layer.cpp  invisible_layer.cpp  layered_costmap.cpp  observation_buffer.cpp  obstacle_layer.cpp  static_layer.cpp
roborts_decision/: CMakeLists.txt  README.md  behavior_modes.h  behavior_test.cpp  decision_node.cpp  navigation_test_decision.cpp  open_day_decision_node.cpp
roborts_decision/behavior_tree/: behavior_node.h
roborts_decision/blackboard/: blackboard.h
roborts_decision/config/: decision.prototxt  decision_blue_1.prototxt  decision_blue_2.prototxt  decision_blue_3.prototxt  decision_open_day.prototxt  decision_r1.prototxt  decision_r2.prototxt  decision_r3.prototxt  decision_r4.prototxt  decision_red_1.prototxt  decision_red_2.prototxt  decision_temp.prototxt
roborts_decision/example_behavior/: attack_behavior.h  back_boot_area_behavior.h  chase_behavior.h  escape_behavior.h  goal_behavior.h  open_day_chase_behavior.h  open_day_patrol_behavior.h  patrol_behavior.h  reload_behavior.h  search_behavior.h  shoot_behavior.h  simple_decision_tree.h  to_buff_zone_behavior.h
roborts_decision/executor/: chassis_executor.cpp  gimbal_executor.cpp  gimbal_executor.h
roborts_decision/goal_factory/: hierarchical_goal_factory.cpp  hierarchical_goal_factory.h  open_day_goal_factory.cpp  open_day_goal_factory.h  test_goal_factory.cpp  test_goal_factory.h
roborts_decision/proto/: decision.proto
roborts_detection/: CMakeLists.txt
roborts_detection/armor_detection/yolo/: CMakeLists.1.txt  CMakeLists.txt  yolo_interface.h
roborts_detection/armor_detection/yolo/config/: voc.data  yolo.prototxt  yolo_blue_1.prototxt  yolo_blue_3.prototxt  yolo_red_1.prototxt  yolo_red_2.prototxt  yolov3-blue.cfg  yolov3-tiny.cfg
roborts_detection/armor_detection/yolo/proto/: yolo.proto
roborts_detection/armor_detection/yolo/src/: box.c  c2cpp.c  c2cpp.h  cpp2c.cpp  darknet.h  demo.c  demo.h  image.c  image.h  network.c
roborts_localization/: localization_node.cpp
roborts_msgs/: CMakeLists.txt
roborts_planning/: CMakeLists.txt
roborts_tracking/: CMakeLists.txt
scripts/: open_cores.txt  soft_link.sh
(+72 files in other folders)
